Styles of drugs' scrollbar  has been corrected.

--- a/проект/style.css
+++ b/проект/style.css
@@ -17,23 +17,24 @@ body {background:url("concrete_seamless.png");
 .menu { display:table;		
 		width:250px;
 		height:100px;
-		text-align:center;			
+		text-align:center;	
+		border:4px outset;
 		border-radius:10px;
 		line-height:100%;
 		box-shadow:10px 8px 20px -1px black;
 		background:linear-gradient(to top left, #FFDEAD, #FFFAF0);
-		transition-property:width;
-        transition-duration:0.125s;
-		transition-timing-function:ease-in;
-		transition-delay:0.005s;
+		transition:width 0.125s ease-in 0.005s, background-color 0.075s ease-out 0.005s;
 		}
 
 		
 .menu:hover {width:265px;
 			 background:#FFFAF0;
 			 cursor:pointer;}
-		
-
+.menu:active {border:4px inset;
+			 background-color: #CD853F ;
+			 }		
+.menu:visited {background-color: #CD853F ;
+			 }		
 
 span {display:table-cell;
 	vertical-align:middle;}
@@ -107,9 +108,10 @@ span {display:table-cell;
 
 /* стиль для ячеек таблицы вопросов "ПОЛ, ПРИНИМАЕТ ЛИ РИФАМПИЦИН.."*/
 #tdTableQuestions {width:150px;
-				   height:60px;
+				   height:56px;
 				   text-align:center;
 				   vertical-align:middle;
+				   border:2px solid;
 				   border-radius:10px;
 				   background:linear-gradient(to top left, #CD853F , #FFDEAD);
 				   box-shadow:10px 8px 20px -1px black;
@@ -513,7 +515,7 @@ span {display:table-cell;
 /* стиль для контейнера	вмещающего таблицу со списком лекарств */ 		
 #containerUp {width:186px; 
 			  height:342px;
-			  background:linear-gradient(to top left,AntiqueWhite, OldLace );
+			  background-color:linear-gradient(to top left,AntiqueWhite, OldLace );
 			  border:2px black;
 			  position:absolute; 
 			  top:0px; 
@@ -528,22 +530,21 @@ span {display:table-cell;
 /*стиль для ячеек таблицы - списка лекарственных средств в разделе "Список лекартсвенных средств"	*/	
 .td_list_Drugs {width:156px; 
 			    height:40px; 
-                background:linear-gradient(to top left,AntiqueWhite, OldLace );
+                background-color:linear-gradient(to top left,AntiqueWhite, OldLace );
                 vertical-align:middle;
                 text-align:center; 
                 cursor:pointer;
-				transition-property:font-size;
-                transition-duration:0.125s;
-		        transition-timing-function:ease-in;
-		        transition-delay:0.005s;
-				border-radius:5px;
+				transition:font-size 0.125s ease-in 0.005s, background-color 0.125s ease-in 0.005s ;
+                border-radius:5px;
 				}	
 				
 /*стиль для ячеек таблицы - списка лекарственных средств в разделе "Список лекартсвенных средств" при наведении курсора	*/	
-.td_list_Drugs:hover {background:red;
+.td_list_Drugs:hover {width:152px;
+						background-color:red;
 					  font-size:17px;
-					  } 
-.td_list_Drugs:visited {background:red;					  
+					  border-left:2px solid;
+					  border-right:2px solid;} 
+.td_list_Drugs:visited {background-color:red;					  
 					  } 
 /*стиль для окна вывода информации о лекарственном препарате */					  
 #openDrugs {background:white;
